<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Muslim Ghanchi Samaj</string>
    <string name="folder_name" translatable="false">community</string>
    <string name="action_delete" translatable="false">Delete</string>
    <string name="action_disable" translatable="false">Disable</string>
    <string name="action_location" translatable="false">Location</string>
    <string name="action_active" translatable="false">Active</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="nav_item_home" translatable="false">Home</string>
    <string name="nav_item_filter" translatable="false">Filters</string>
    <string name="nav_item_statistic" translatable="false">Statistics</string>
    <string name="nav_item_committee" translatable="false">Committee</string>
    <string name="label_add_fact" translatable="false">Add Fact</string>
    <string name="label_add_photos" translatable="false">Add Photos</string>
    <string name="label_scan_photos" translatable="false">Scan Photos</string>
    <string name="label_add_audio" translatable="false">Add Audio</string>
    <string name="label_add_relative" translatable="false">Add Relative</string>
    <string name="key_1" translatable="false">1</string>
    <string name="key_2" translatable="false">2</string>
    <string name="key_3" translatable="false">3</string>
    <string name="key_4" translatable="false">4</string>
    <string name="key_5" translatable="false">5</string>
    <string name="key_6" translatable="false">6</string>
    <string name="key_7" translatable="false">7</string>
    <string name="key_8" translatable="false">8</string>
    <string name="key_9" translatable="false">9</string>
    <string name="key_0" translatable="false">0</string>
    <string name="server_not_available" translatable="false">Server error</string>
    <string name="login_1" translatable="false">Ii5POjxrXA4</string>
    <string-array name="bloodGroup">
        <item>O+Ve</item>
        <item>O-Ve</item>
        <item>B+Ve</item>
        <item>B-Ve</item>
        <item>A+Ve</item>
        <item>A-Ve</item>
        <item>AB+Ve</item>
        <item>AB-Ve</item>
    </string-array>
    <string-array name="main_menu">
        <item>City</item>
        <item>QRCode</item>
        <item>Distance</item>
        <item>Matrimony</item>
        <item>MyEvent</item>
        <item>Favorite</item>
        <item>Admin</item>
        <item>Restricted</item>
        <item>NewEvent</item>
        <item>Uploads</item>
        <item>Paytm</item>
        <item>Register</item>
        <item>guide</item>
        <item>My Contacts</item>
    </string-array>
    <string name="married" translatable="false">Married</string>
    <string name="marital">Marital</string>
    <string-array name="languages">
        <item>Choose Language</item>
        <item>@string/_english</item>
        <item>@string/_gujarati</item>
        <item>@string/_hindi</item>
    </string-array>
    <string name="_english" translatable="false">English</string>
    <string name="_gujarati" translatable="false">ગુજરાતી</string>
    <string name="_hindi" translatable="false">हिन्दी</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_filter</item>
        <item>@string/nav_item_statistic</item>
        <item>@string/nav_item_committee</item>

    </string-array>
    <string-array name="add_relative_labels">
        <item>@string/partner</item>
        <item>@string/father</item>
        <item>@string/mother</item>
        <item>@string/brother</item>
        <item>@string/sister</item>
        <item>@string/son</item>
        <item>@string/daughter</item>

    </string-array>
    <string name="partner" translatable="false">Partner</string>
    <string name="father" translatable="false">Father</string>
    <string name="mother" translatable="false">Mother</string>
    <string name="brother" translatable="false">Brother</string>
    <string name="sister" translatable="false">Sister</string>
    <string name="son" translatable="false">Son</string>
    <string name="daughter" translatable="false">Daughter</string>
    <string name="fragment_title_1" translatable="false">Relatives</string>
    <string name="fragment_title_2" translatable="false">Photo</string>
    <string name="fragment_title_3" translatable="false">Facts</string>
    <string name="app_create" translatable="false">app_create</string>
    <string name="facebook_app_id" translatable="false">2264814596961704</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2264814596961704</string>
    <string name="web_client_id" translatable="false">317054014432-ns6e6r26hvd1jju005tu35bab6r7460p.apps.googleusercontent.com</string>
    <string name="map_api_key" translatable="false">AIzaSyDci3uC0jldqqy0I4g4D1QpEauiVONXa1Y</string>
    <string name="CityList_SP" translatable="false">CityList_SP</string>
    <string name="allow_get_data_value" translatable="false">1</string>
    <string name="all_cities_list" translatable="false">all_cities</string>
    <string name="choose_language" translatable="false">Change Language</string>
    <string name="register" translatable="false">Register</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue_using_our_app">Please login to continue using our app</string>
    <string name="login_with">Login with</string>
    <string name="_mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="enter_mobile_no">Enter Mobile no</string>
    <string name="password" translatable="false">PIN</string>
    <string name="_forgot_password">Forgot PIN?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="send_sms" translatable="false">Send SMS</string>
    <string name="resend_otp" translatable="false">Resend OTP</string>
    <string name="send_email">send email</string>
    <string name="do_you_have_an_account_register_now">Do you have an account?</string>
    <string name="err_msg_blank">Please enter missing details</string>
    <string name="nav_item_change_password">Change PIN</string>
    <string name="err_msg_invalid_mobile">Invalid Mobile Number</string>
    <string name="invalid_mobile" translatable="false">Invalid Mobile Number</string>
    <string name="type_otp">Type OTP</string>
    <string name="registraion_request_pending">Registration request is pending. Please contact to Admin !!</string>
    <string name="invalid_username">Invalid username</string>
    <string name="error_msg_get_data_social_site">Not able to get your details from Social account</string>
    <string name="update_profile_photo">Do you want to update Profile Photo?</string>
    <string name="yes">Yes</string>
    <string name="invalid_username_password">Invalid username or hashkey</string>
    <string name="loading">Working...</string>
    <string name="incorrect" translatable="false">incorrect</string>
    <string name="username" translatable="false">username</string>
    <string name="reset_type" translatable="false">reset_type</string>
    <string name="hint_address">Address</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="hint_name">First Name</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_mobile">10 digit mobile</string>
    <string name="hint_password">PIN</string>
    <string name="hint_conform_password">Confirm PIN</string>
    <string name="how_to_register">How to Register?</string>
    <string name="already_have_a_account_sign_in">Already have a account?</string>
    <string name="hint_surname">Last Name</string>
    <string name="hint_city">City</string>
    <string name="invalid_mobile_range">Mobile number must be 10 digit</string>
    <string name="invalid_email">Invalid Email Address!</string>
    <string name="err_invalid_email" translatable="false">Invalid Email Address!</string>
    <string name="err_msg_repeat_password">PIN and Repeat hashkey not match</string>
    <string name="user_not" translatable="false">User not</string>
    <string name="user_not_found">User not found!</string>
    <string name="can_not_connect_to_internet">Cannot connect to Internet...Please check your connection!</string>
    <string name="server_could_not_found">The server could not be found. Please try again after some time!!</string>
    <string name="parsing_error">Parsing error! Please try again after some time!!</string>
    <string name="connection_timeout">Connection TimeOut! Please check your internet connection.</string>
    <string name="locale_sp" translatable="false">Locale_sp</string>
    <string name="verify_otp">Verify</string>
    <string name="main">Main Details</string>
    <string name="contact">Contanct details</string>
    <string name="personal">Personal details</string>
    <string name="professonal">Professional details</string>
    <string name="_matrimony">Matrimony details</string>
    <string name="some_more">Some more</string>
    <string name="ss_head_name" translatable="false">@string/head_name</string>
    <string name="ss_family_code" translatable="false">@string/member_code</string>
    <string name="ss_mem_name" translatable="false">@string/first_name</string>
    <string name="ss_sp_surname" translatable="false">@string/sub_cast_id</string>
    <string name="ss_sp_samaj" translatable="false">@string/local_community_id</string>
    <string name="ss_sp_marital" translatable="false">@string/marital_status</string>
    <string name="ss_sp_city" translatable="false">@string/city_id</string>
    <string name="ss_sp_gender" translatable="false">@string/gender</string>
    <string name="ss_sp_native" translatable="false">@string/native_place_id</string>
    <string name="ss_minage" translatable="false">@string/min_age</string>
    <string name="ss_maxage" translatable="false">@string/max_age</string>
    <string name="ss_edt_email" translatable="false">@string/email_address</string>
    <string name="ss_edt_mobile" translatable="false">@string/mobile</string>
    <string name="ss_edt_local_add" translatable="false">@string/local_address</string>
    <string name="ss_edt_permanent_add" translatable="false">address</string>
    <string name="ss_edt_pin_code" translatable="false">@string/pincode</string>
    <string name="ss_edt_area" translatable="false">@string/area</string>
    <string name="ss_sp_state" translatable="false">@string/state_id</string>
    <string name="only_numbers" translatable="false">0123456789</string>
    <string name="change_pin">Change PIN</string>
    <string name="current_pin">Current PIN</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="enter_current_pin">Enter Current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="enter_confirm_pin">Enter Confirm PIN</string>
    <string name="update_pin">Update PIN</string>
    <string name="meter">Meter</string>
    <string name="birth_timeDetail">Birth Time</string>
    <string name="HeightDetails">Height</string>
    <string name="WeghtDetails">Weight</string>
    <string name="kg">Kg</string>
    <string name="WelcomeSmart">Welcome to  Smart Filter</string>
    <string name="youDetails">You can search here using many filter options(Like Family head,Family members, Mobile No, Email Id etc...)</string>
    <string name="MainDetails">Main Details</string>
    <string name="birth_placedetails">Birth Place</string>
    <string name="is_spectacles">is Spectacles?</string>
    <string name="is_shaniDetails">is Shani?</string>
    <string name="is_mangalDetails">is Mangal?</string>
</resources>