<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@drawable/round_bottom_corner"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_birth_time"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:singleLine="true"
                android:background="@drawable/border"
                android:hint="@string/birth_timeDetail"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="14sp"
                android:paddingLeft="10dp" />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/edt_birth_place"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:singleLine="true"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="14sp"
                android:background="@drawable/border"
                android:hint="@string/birth_placedetails"
                android:paddingLeft="10dp" />


            <CheckBox
                android:id="@+id/chk_is_spect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:text="@string/is_spectacles" />
            <CheckBox
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:id="@+id/chk_is_shani"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/is_shaniDetails" />

            <CheckBox
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:id="@+id/chk_is_mangal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/is_mangalDetails" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_height_meter"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:singleLine="true"
                        android:background="@drawable/border"
                        android:hint="@string/HeightDetails"
                        android:inputType="number"
                        android:maxLength="8"
                        android:digits="0123456789."
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="14sp"
                        android:paddingLeft="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/meter"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_weight_kg"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:singleLine="true"
                        android:background="@drawable/border"
                        android:hint="@string/WeghtDetails"
                        android:inputType="number"
                        android:maxLength="8"
                        android:digits="0123456789."
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="14sp"
                        android:paddingLeft="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/kg"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="16sp" />
               </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>