<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/left_arrow_black"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_header_logo"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:background="@drawable/group1copy" />
        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:src="@drawable/man_reg" />

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_marginLeft="50dp"
            android:padding="5dp"
            android:src="@drawable/add_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="30dp"
            android:text="@string/register_now"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edt_head_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/man_user"
            android:gravity="center"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences"
            android:paddingLeft="20dp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/edt_spouse_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/woman_avatar"
            android:gravity="center"
            android:hint="@string/hint_spouse_name"
            android:inputType="textCapSentences"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_email_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/close_envelope"
            android:gravity="center"
            android:background="@drawable/border"
            android:hint="@string/hint_email"
            android:inputType="textCapSentences"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/icon"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:hint="@string/hint_mobile"
            android:inputType="textCapSentences"

            android:gravity="center"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:hint="@string/hint_password"
            android:drawableLeft="@drawable/lock"
            android:paddingLeft="20dp"
            android:inputType="textCapSentences"

            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_cpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:hint="@string/hint_conform_password"
            android:inputType="textCapSentences"
            android:drawableLeft="@drawable/lock"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:hint="@string/hint_address"
            android:inputType="textCapSentences"
            android:drawableLeft="@drawable/home_address"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/txt_how_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/how_to_register"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_registration"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/mdtp_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/already_have_a_account_sign_in"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>