<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/ll_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/change_pin"
            android:textColor="@color/black1"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_corner_white"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/current_pin"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_forgot"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/forgot_pin"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp"
                         />


                </LinearLayout>

                <EditText
                    android:id="@+id/edt_curr"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border"
                    android:digits="@string/only_numbers"
                    android:inputType="numberPassword"
                    android:drawableEnd="@drawable/hide_pass"
                    android:fontFamily="@font/montserrat_semibold"
                    android:paddingLeft="10dp"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/edt_new"
                    android:hint="@string/enter_current_pin"
                    android:textColorHint="@color/color_mid_light_gray"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/new_pin"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.krs.community.utils.ChromaHashView
                    android:id="@+id/edt_new"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/montserrat_semibold"
                    android:background="@drawable/border"
                    android:hint="@string/enter_new_pin"
                    android:nextFocusDown="@id/edt_confirm"
                    android:digits="@string/only_numbers"
                    android:textColorHint="@color/color_mid_light_gray"
                    android:paddingLeft="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/confirm_pin"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.krs.community.utils.ChromaHashView
                    android:id="@+id/edt_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:imeOptions="actionDone"
                    android:textColorHint="@color/color_mid_light_gray"
                    android:background="@drawable/border"
                    android:hint="@string/enter_confirm_pin"
                    android:digits="@string/only_numbers"
                    android:fontFamily="@font/montserrat_semibold"
                    android:paddingLeft="10dp" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_update"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_registration_selection"
                android:text="@string/update_pin"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/white" />


        </LinearLayout>


    </LinearLayout>

</layout>

