<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:enabled="false"
    android:filterTouchesWhenObscured="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:filterTouchesWhenObscured="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/WelcomeSmart"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/youDetails"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner_gray"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/MainDetails"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp" />


</LinearLayout>